update front end text

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <form id="name-form" style="margin: 0 auto">
-                <h1>Ice Breaker</h1>
+                <h1>Diyar's Ice Breaker</h1>
                 <input type="text" name="name" placeholder="Enter name">
                 <button id="magic-button" type="submit" class="center">Do Your Magic</button>
             </form>
@@ -29,14 +29,14 @@
                 <h2>Interesting Facts</h2>
                 <div id="facts"></div>
             </div>
-            <div>
+            {% comment %} <div>
                 <h2>Ice Breakers</h2>
                 <div id="ice-breakers"></div>
             </div>
             <div>
                 <h2>Topics of Interest</h2>
                 <div id="topics-of-interest"></div>
-            </div>
+            </div> {% endcomment %}
         </main>
 
         <script>
