fix comments in html

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,18 +25,20 @@
                 <h2>Summary</h2>
                 <p id="summary"></p>
             </div>
+           <!--
             <div>
                 <h2>Interesting Facts</h2>
                 <div id="facts"></div>
             </div>
-            {% comment %} <div>
+            <div>
                 <h2>Ice Breakers</h2>
                 <div id="ice-breakers"></div>
             </div>
             <div>
                 <h2>Topics of Interest</h2>
                 <div id="topics-of-interest"></div>
-            </div> {% endcomment %}
+            </div>
+            -->
         </main>
 
         <script>
